--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,44 @@
-py-trees==0.8.3
-networkx==2.2
-Shapely==1.7.1
-xmlschema==1.0.18
 ephem
 tabulate
-opencv-python==4.2.0.32
 numpy
 matplotlib
-six
 simple-watchdog-timer
+python==3.7
+python-dev==3.7
+pip
+setuptools==46.3.0
+wheel==0.34.2
+py_trees==0.8.3
+networkx==2.2
+six==1.14.0
+numpy==1.18.4
+ephem
+shapely==1.7.0
+xmlschema==1.1.3
+tabulate==0.8.7
+torch
+torchvision
+fvcore
+iopath
+git+https://github.com/facebookresearch/pytorch3d.git
 
+# System dependencies
+libpng16-16==1.6.34-1ubuntu0.18.04.2
+libtiff5
+libjpeg8==8c-2ubuntu8
+build-essential==12.4ubuntu1
+wget==1.19.4-1ubuntu2.2
+git
+libxerces-c-dev
+libssl-dev
+libffi-dev
+libgl1-mesa-glx
+libglib2.0-0
+libjpeg-dev
+libpng-dev
+libtiff-dev
+libavcodec-dev
+libavformat-dev
+libswscale-dev
+libgtk2.0-dev
+pkg-config
